minor fixes to alignment and css on bio div

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ a {
   font-size: 16px;
   padding: 20px;
   margin: 20px;
+  color: hsl(178, 27%, 55%);
 }
 #bio-p {
   text-align: center;
